--- a/help/src/hid00006.htm
+++ b/help/src/hid00006.htm
@@ -763,6 +763,7 @@
     <dt id="SearchPair">SearchPair<span class="pram_text">[_/開始行パターン/;/終了行パターン/]</span></dt>
     <dd>カーソル位置の括弧と対応する括弧を検索します。<br>
       検索できるペアは（）〔〕［］｛｝〈〉《》「」『』【】(){}[] です。<br>
+      <a href="hid00023.htm">オプション設定 - フォント・配色</a> - 配色 で「<b>対応する括弧の文字色</b>」を設定しておくと、対応する括弧が強調表示されます。<br>
       <div class="spc_box">
         通常表示のHTML文書では、カーソル位置に head、body、div、header、footer、nav、main、section、article、aside、table、ul、ol、form、script
         タグがあった場合、それに対応する開始/終了タグを検索します。<br>
