--- a/help/src/hid00057.htm
+++ b/help/src/hid00057.htm
@@ -6,15 +6,16 @@
   <title>ディレクトリ履歴</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="DirHistory">
-    <param name="Keyword" value="DirStack">
-    <param name="Keyword" value="ReturnList">
-    <param name="Keyword" value="ToLeft">
-    <param name="Keyword" value="ToParentOnLeft">
-    <param name="Keyword" value="ToParentOnRight">
-    <param name="Keyword" value="ToRight">
-    <param name="Keyword" value="ディレクトリ・スタック">
-    <param name="Keyword" value="ディレクトリ履歴">
+	<param name="Keyword" value="DirHistory">
+	<param name="Keyword" value="DirStack">
+	<param name="Keyword" value="Migomo">
+	<param name="Keyword" value="ReturnList">
+	<param name="Keyword" value="ToLeft">
+	<param name="Keyword" value="ToParentOnLeft">
+	<param name="Keyword" value="ToParentOnRight">
+	<param name="Keyword" value="ToRight">
+	<param name="Keyword" value="ディレクトリ・スタック">
+	<param name="Keyword" value="ディレクトリ履歴">
   </object>
 </head>
 
