--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -45,9 +45,17 @@
   </div>
 
   <dl>
+    <dt>V16.11 <span class="ver_date">(2023-12-26)</span></dt>
+    <dd>
+      ・文字列検索(GREP)をマルチスレッド化しました(最大4スレッド)。<br>
+      ・文字列検索(GREP)で、結果リストを「行内容でソート」後に「ソートを解除」しても元の並びに戻らなかったのを修正。なお、絞り込みが行われた状態でソートを解除しても絞り込みは解除されないようにしました。<br>
+      ・オプション設定 - フォント・配色 に「対応する括弧の文字色」を追加。設定すると、カーソル位置の括弧のペアが強調表示されます。<br>
+      ・オプション設定 - テキストビューア の「カーソルを常に可視領域に」が有効で、スクロールバーでスクロールしたとき、カーソルがスティッキーの下に隠れないようにしました。<br>
+    </dd>
+
     <dt>V16.10 <span class="ver_date">(2023-12-24)</span></dt>
     <dd>
-      ・オプション設定 - テキストビューア に「インデントガイドを表示」を追加。これに対応するコマンドとして ShorIndent を追加。また、オプション設定 - フォント・配色 に「インデントガイド」、「インデントガイド(交互)」を追加。<br>
+      ・オプション設定 - テキストビューア に「インデントガイドを表示」を追加。これに対応するコマンドとして ShowIndent を追加。また、オプション設定 - フォント・配色 に「インデントガイド」、「インデントガイド(交互)」を追加。<br>
       ・テキストビューアの SelCurWord コマンドのパラメータに EX を追加。カーソルが既存の選択範囲の末尾にある場合、単語を追加選択できます。空白や記号なども順次選択されます。<br>
       ・オプション設定 - テキストビューア の「外部ビューア」を廃止。必要な場合は「外部ツール」を利用してください。<br>
       ・オプション設定で検索欄の内容が変化したとき、50m秒待機してから検索を行うようにしました(IME確定時の対策)。<br>
