--- a/help/src/hid00016.htm
+++ b/help/src/hid00016.htm
@@ -6,17 +6,18 @@
   <title>オプション設定 - キー設定</title>
   <link rel="stylesheet" type="text/css" href="help.css">
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-    <param name="Keyword" value="2ストロークキー操作">
-    <param name="Keyword" value="InitialSearch">
-    <param name="Keyword" value="KeyList">
-    <param name="Keyword" value="OpenStandard">
-    <param name="Keyword" value="インポート">
-    <param name="Keyword" value="エイリアス">
-    <param name="Keyword" value="エクスポート">
-    <param name="Keyword" value="キー割り当て一覧">
-    <param name="Keyword" value="キー設定">
-    <param name="Keyword" value="コマンドの索引">
-    <param name="Keyword" value="ログウィンドウ">
+	<param name="Keyword" value="2ストロークキー操作">
+	<param name="Keyword" value="InitialSearch">
+	<param name="Keyword" value="KeyList">
+	<param name="Keyword" value="Migemo">
+	<param name="Keyword" value="OpenStandard">
+	<param name="Keyword" value="インポート">
+	<param name="Keyword" value="エイリアス">
+	<param name="Keyword" value="エクスポート">
+	<param name="Keyword" value="キー割り当て一覧">
+	<param name="Keyword" value="キー設定">
+	<param name="Keyword" value="コマンドの索引">
+	<param name="Keyword" value="ログウィンドウ">
   </object>
 </head>
 
