--- a/help/src/hid00084.htm
+++ b/help/src/hid00084.htm
@@ -29,8 +29,7 @@
   </p>
 
   <p>
-    <b>設定メニュー</b> - [<b>デフォルトの構文強調表示定義をコピー</b>] を用いると、特定の拡張子に対するデフォルトの構文強調表示定義をクリップボードにコピーできます(<span
-      class="note_text">例外的な処理もあるため、実際の動作と一致しない場合もあり</span>)。取得した内容を変更して定義ファイルに設定すれば、デフォルトの定義を拡張できます。
+    <b>設定メニュー</b> - [<b>デフォルトの構文強調表示定義をコピー</b>] を用いると、特定の拡張子に対するデフォルトの構文強調表示定義をクリップボードにコピーできます(例外的な処理もあるため、実際の動作と一致しない場合もあり)。取得した内容を変更して定義ファイルに設定すれば、デフォルトの定義を拡張できます。
   </p>
 
   <p>
