--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -1656,6 +1656,15 @@ nyanfi_imgview.jpg 129,806 800 × 600  (4 : 3)
       <a href="hid00090.htm">→ Git の利用について</a>
     </dd>
 
+    <dt id="GitGrep">GitGrep</dt>
+    <dd>Gitの作業ディレクトリにいる場合、<a href="hid00090.htm#GitGrep">Git GREP</a> ウィンドウを開き、作業ツリーに対して指定した条件で <b>git grep</b> を実行できます。この場合、ファイラーのカレントがそのまま作業ディレクトリとなります。リビジョンに対して実行したい場合は、<a href="hid00090.htm#GitViewer">Gitビューア</a>から開いてください。<br>
+      <p class="info_text">
+      バージョン管理のために Git を利用していない場合でも、頻繁に検索する場所をリポジトリにしておくと、これを利用できて便利かもしれません。制約はありますが、<b>NyanFi</b> の <a href="hid00056.htm">文字列検索(GREP)</a> よりもかなり高速です。
+      </p>
+      <a href="hid00090.htm#GitGrep">→ Git の利用について - GREP</a><br>
+      <a href="#GitViewer">→ GitViewer</a>　<a href="#Grep">→ Grep</a>
+    </dd>
+
     <dt id="GitViewer">GitViewer<span class="pram_text">[_N履歴制限数(デフォルト=100)][;CP]</span></dt>
     <dd>Gitの作業ディレクトリにいる場合、<a href="hid00090.htm#GitViewer">Gitビューア</a>が表示されます。<br>
       ブランチ一覧、コミット履歴、差分の概略を確認でき、ブランチやコミットに対する操作、ステージングやコミット、Console、GUI、diffツールの起動などを行えます。<br>
