--- a/help/src/hid00051.htm
+++ b/help/src/hid00051.htm
@@ -170,7 +170,7 @@
     ファイル名に対し、<b>検索</b> <img src="combobox.png" alt=""> に入力した文字列にマッチする部分を <b>置換</b> <img src="combobox.png" alt="">
     で指定した文字列で置換します。<br>
     <img src="chkbox.png" alt=""> <b>正規表現</b>
-    をチェックしていると正規表現が使えます。<b>検索</b>欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて置換を開始できません。<br>
+    をチェックしていると正規表現(PCRE)が使えます。<b>検索</b>欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて置換を開始できません。<br>
     <img src="chkbox.png" alt=""> <b>拡張子は置換しない</b> をチェックしていると、ドットを含む拡張子部分は置換の対象になりません。<br>
     なお置換文字列には、書式文字列の <b>\C</b> (ファイルのパス無しディレクトリ名)を使用できます。
   </p>
