--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -33,7 +33,11 @@
   <div class="info_text">
     検索はマルチスレッドで行われます。スレッドはファイル単位で作られ(最大4スレッド)、結果が取得される毎にリストに追加されていきます。そのためファイルの順序が前後する場合がありますが、完了時にはパス/行番号順にソート表示されます。<br>
   </div>
- 
+
+  <div class="info_text">
+    検索場所が Git リポジトリの場合、より高速な <b>Git GREP</b> (<a href="hid00005.htm#GitGrep">GitGrep</a>)も利用できます。
+  </div>
+
   <p>
     上部のタブを切り替えることにより、<b>文字列検索</b>および<a href="hid00061.htm">文字列置換</a>を行えます。<br>
   </p>
@@ -115,8 +119,11 @@
         結果リストのカーソル行にURLが含まれている場合、右クリックメニューの「<b>URLを開く</b>」でそれを開けます。<br>
       </div>
 
+      <hr class="light">
+
       <div class="spc_box">
-        表示メニュー(または結果リストの右クリックメニュー)の「<b>結果リストに項目番号を表示</b>」をチェックすると、項目の通し番号が表示されます。また、「<b>項目番号をファイル単位で表示</b>」もチェックすると、項目番号をファイル単位の連番で表示します。ファイル内で複数行ヒットした場合、最初の行だけに番号が表示されます。なお、行内容でソートしている場合は項目の通し番号になります。<br>
+        表示メニュー(または結果リストの右クリックメニュー)の「<b>検索中に結果リストを更新しない</b>」をチェックする、検索の途中経過を結果リストに表示しません(プログレスバーやヒット数は表示)。<br>
+        「<b>結果リストに項目番号を表示</b>」をチェックすると、項目の通し番号が表示されます。また、「<b>項目番号をファイル単位で表示</b>」もチェックすると、項目番号をファイル単位の連番で表示します。ファイル内で複数行ヒットした場合、最初の行だけに番号が表示されます。なお、行内容でソートしている場合は項目の通し番号になります。<br>
         「<b>結果リストにサブディレクトリ名を表示</b>」をチェックすると、ファイル名の前にカレント以下のサブディレクトリ名が表示されます(ワークリストの場合は除く)。<br>
         「<b>行頭のタブや空白を非表示</b>」をチェックすると、結果リストで、行頭のタブや空白を除外して表示します(次行部分を含む)。<br>
         「<b>マッチ語が見えないとき前部分を省略</b>」をチェックすると、結果リストの各行で、マッチした語が見えない場合、前部分を省略して見えるように表示します。<br>
@@ -124,6 +131,8 @@
         「<b>次行表示部分の明度を加減</b>」をチェックすると、後述の <img src="chkbox.png" alt=""> <b>次行表示</b>
         をチェックしている場合に、次行部分の文字明度を加減してマッチ行と区別しやすくします。<br>
       </div>
+
+      <hr class="light">
 
       <div class="spc_box">
         なお、結果リストの内容をテキストエディタなどで利用したい場合、ファイルメニューの「<b>検索結果に名前を付けて保存</b>」でテキストファイルとして保存したり、編集メニュー(または結果リストの右クリックメニュー)の「<b>検索結果をクリップボードにコピー</b>」でコピーしたりしてください。<br>
@@ -161,7 +170,7 @@
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>検索に正規表現を用います。<br>
+    <dd>検索に正規表現(PCRE)を用います。<br>
       入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて<span
         class="btn_frame">開始</span>ボタンを押せません。<br>
       なお検索文字列欄の右クリックメニューから、正規表現を参照したり、<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
