--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -41,7 +41,7 @@
     </dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>置換に正規表現を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
+    <dd>置換に正規表現(PCRE)を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
       入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて<span
         class="btn_frame">開始</span>ボタンを押せません。<br>
     </dd>
