--- a/help/src/hid00085.htm
+++ b/help/src/hid00085.htm
@@ -20,8 +20,8 @@
     また、<a href="hid00052.htm">ファイル名検索</a>、<a href="hid00051.htm#Replace">名前の変更 - 置換</a>、<a
       href="hid00056.htm">文字列検索(GREP)/文字列置換</a>、テキストビューア/一覧ダイアログでの<a href="hid00065.htm">文字列検索</a>、<a
       href="hid00066.htm">ユーザ定義文字列一覧</a>、および<a href="hid00077.htm">振り分け</a>において、正規表現を使える入力欄の右クリックメニューからも利用できます。<br>
-      なお、<b>NyanFi</b> で利用できる正規表現は Perl-Compatible です。
-  </p>
+      なお、<b>NyanFi</b> で利用できる正規表現はPerl互換(PCRE)です。
+    </p>
 
   <p>
     画面右側の上部には、正規表現のメタ文字の簡単な説明が一覧表示されています。また下部には、いくつかのサンプルパターンがあります。<br>
