--- a/help/src/hid00101.htm
+++ b/help/src/hid00101.htm
@@ -2156,6 +2156,11 @@
       <td><a href="hid00090.htm">→ Git の利用について</a></td>
     </tr>
     <tr>
+      <td><a href="hid00005.htm#GitGrep">GitGrep</a></td>
+      <td>Git GREP</td>
+      <td><a href="hid00090.htm#GitGrep">→ Git の利用について</a></td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm#GitViewer">GitViewer</a></td>
       <td>Gitビューア</td>
       <td><a href="hid00090.htm">→ Git の利用について</a></td>
