--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -17,16 +17,8 @@
     <b>仮設伝言板</b>　<span class="small">お知らせや、名無しさんたちとの間接的なやりとりのためのスペースです(<small>5ちゃんねるに直接書き込むことはありません</small>)。<br></span>
 
     <ul>
-      <li>
-        Susie プラグインの対応は、WICやアーカイバとの関係で処理がややこしくなるので勘弁してください。<br>
-      </li>
-    </ul>
-
-<!--
-    <ul>
       <li>『仮設伝言板』というのはどこにあるのかと問われる方がいらっしゃるので、何もないときでも表示しておきます。</li>
     </ul>
--->
   </div>
   <br>
 
@@ -45,6 +37,16 @@
   </div>
 
   <dl>
+    <dt>V16.12 <span class="ver_date">(2023-12-29)</span></dt>
+    <dd>
+      ・文字列検索(GREP)/文字列置換の結果リストを見やすくしました。同じファイル内の2番目以降ではファイル名を省略し、異なるファイル間には境界線を引きます。また、行番号は分離して右揃えで表示します。<br>
+      ・文字列検索(GREP)/文字列置換の表示メニュー/結果リストの右クリックメニューに「検索中に結果リストを更新しない」/「一括置換中に結果リストを更新しない」を追加。<br>
+      ・Gitビューアの検索バーに[GREP]ボタンを追加。Git GREP ウィンドウを開き、選択中のリビジョンに対して git grep を実行できます。<br>
+      ・ファイラーに GitGrep コマンドを追加。Gitの作業ディレクトリにいる場合、Git GREP ウィンドウを開きます。ファイラーのカレントがそのまま作業ディレクトリとなります。<br>
+      ・オプション設定 - フォント・配色 に「ディレクトリ情報の下境界線」および「ドライブ情報の上境界線」を追加(無効化可能)。今まではドライブ情報の上境界線を特定の状態のときに「分割境界線」色で表示していましたが、これを指定色で常に表示するようにしました。<br>
+      ・無効なUNCパスのディレクトリが含まれてるワークリストを開くと、desktop.ini の存在チェックのため表示に時間がかかってしまうのを修正(V16.09)。UNCパスのディレクトリについては、フォルダアイコンのチェック/取得を行わないようにしました。<br>
+    </dd>
+
     <dt>V16.11 <span class="ver_date">(2023-12-26)</span></dt>
     <dd>
       ・文字列検索(GREP)をマルチスレッド化しました(最大4スレッド)。<br>
