--- a/help/src/hid00052.htm
+++ b/help/src/hid00052.htm
@@ -62,7 +62,7 @@
     <dd>検索語の大文字・小文字を区別します。</dd>
 
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>検索語に正規表現を用います。検索語欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
+    <dd>検索語に正規表現(PCRE)を用います。検索語欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
       入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて検索を開始できません。<br>
       <br>
     </dd>
