--- a/help/src/hid00065.htm
+++ b/help/src/hid00065.htm
@@ -45,7 +45,7 @@
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>検索に正規表現を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
+    <dd>検索に正規表現(PCRE)を用います。なお、検索文字列欄の右クリックメニューから、正規表現を参照したり<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
       検索語欄にフォーカスがある場合<span class="btn_frame">Ctrl</span>+<span class="btn_frame">R</span>キーでも切り替えられます。<br>
       入力内容が正しくない場合、検索欄を囲むエラー色の枠が表示されて検索を開始できません。<br>
     </dd>
