--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -8,6 +8,7 @@
   <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="FileEdit">
 	<param name="Keyword" value="GREP">
+	<param name="Keyword" value="grep.exe">
 	<param name="Keyword" value="Migemo">
 	<param name="Keyword" value="ReturnList">
 	<param name="Keyword" value="TextViewer">
@@ -27,16 +28,31 @@
   <p>
     <a href="hid00005.htm#Grep">Grep</a> コマンドを実行すると、カレント側ファイルリスト(<a href="hid00052.htm">ファイル名検索</a>の結果リストや<a
       href="hid00060.htm">ワークリスト</a>も可)のテキストファイルに対する <b>文字列検索(GREP)</b> 画面が開きます。<br>
-    <b>xd2txlib.dll</b> がインストールされていると、PDF、WORD、EXCEL、一太郎などの各種バイナリ文書も検索可能です。
   </p>
+    <p>検索はマルチスレッドで行われます。スレッドはファイル単位で作られ(最大4スレッド)、結果が取得される毎にリストに追加されていきます。そのためファイルの順序が前後する場合がありますが、完了時にはパス/行番号順にソート表示されます。<br></p>
 
-  <div class="info_text">
-    検索はマルチスレッドで行われます。スレッドはファイル単位で作られ(最大4スレッド)、結果が取得される毎にリストに追加されていきます。そのためファイルの順序が前後する場合がありますが、完了時にはパス/行番号順にソート表示されます。<br>
-  </div>
+    <p><b>xd2txlib.dll</b> がインストールされていると、PDF、WORD、EXCEL、一太郎などの各種バイナリ文書も検索可能です。</p>
 
-  <div class="info_text">
-    検索場所が Git リポジトリの場合、より高速な <b>Git GREP</b> (<a href="hid00005.htm#GitGrep">GitGrep</a>)も利用できます。
-  </div>
+  <hr class="light">
+
+  <p>
+    <a href="hid00005.htm#Grep2">Grep2</a> コマンドを実行してもこの画面が開きますが、検索処理には外部の <b>grep.exe</b> を利用します。<br>
+    <b>Git for Windows</b> をインストールしていると、<b>grep.exe</b> も利用できるはずです。標準的な場所にインストールされている場合は自動的に検出されますが、そうでない場合は <a href="hid00024.htm#Other">オプション設定 - 一般2 - その他</a> で設定してください。<br>
+
+    正規表現検索などは <b>Grep</b> に比べてかなり高速ですが、以下のような制約があります。<br>
+    <ul>
+      <li><b>AND</b>、<b>タグ除外</b>、<b>次行表示</b> オプションは無効です。</li>
+      <li><b>1マッチ</b> では行番号や行内容は取得されません。ファイル名だけが表示されます。</li>
+      <li>ディレクトリの深さは指定できません。</li>
+      <li>UTF-8 以外のファイルでは、日本語を検索できません。</li>
+      <li>検索の進捗状況は表示されず、中断もできません。</li>
+      <li>正規表現はPerl互換(PCRE)ではなく、拡張正規表現(POSIX)になります(\d については内部で [0-9] に変換)。</li>
+      </ul>
+  </p>
+  <hr clas="light">
+
+  <p>検索場所が Git リポジトリの場合、<b>Git GREP</b> (<a href="hid00005.htm#GitGrep">GitGrep</a>)を利用できます。</p>
+  <br>
 
   <p>
     上部のタブを切り替えることにより、<b>文字列検索</b>および<a href="hid00061.htm">文字列置換</a>を行えます。<br>
@@ -74,7 +90,7 @@
 
     <dt class="no_bg" id="Filter">フィルタ</dt>
     <dd>
-      検索を行った後で、<b>フィルタ</b> <img src="edit.png" alt=""> 欄に文字を入力すると、結果リストを絞り込むことができます。<br>
+      検索を行った後で、<b>フィルタ</b> <img src="edit.png" alt=""> 欄に文字を入力すると、ファイル名や行番号を除いた行内容部分を対象として、結果リストを絞り込むことができます。
       <img src="chkbox.png" alt=""> <b>Migemo</b> をチェックしていると、<b>Migemo</b> モードで絞り込みを行えます。<br>
       <div class="note_text">
         ※<b>Migemo</b> モードだと処理が重くなります。フィルタ欄には日本語も入力できるので、項目数が多い場合は通常モードにした方がよいでしょう。<br>
@@ -104,7 +120,7 @@
         除外</b>」で、結果リストを絞り込めます。キーワードは、空白で区切って複数指定可能。その場合、抽出ではいずれかを含むものが、除外ではいずれも含まないものが残ります。大小文字は区別されません。「<b>絞り込みの解除</b>」で、絞り込みを解除できます。「<b>絞り込みを確定</b>」で、絞り込みによって表示から除外された項目を結果リストから削除します。<br>
 
       <div class="spc_box">
-        「<b>行内容でソート</b>」では、マッチ行(次行部分は無視)の内容に基づいて結果リストをソートをできます。<br>
+        「<b>行内容でソート</b>」では、マッチ行(次行部分は無視)の内容に基づいて結果リストをソートをできます。後述の「<b>行頭のタブや空白を非表示</b>」が有効な場合は、ソートも行頭のタブや空白を除いて行われます。<br>
       </div>
 
       <div class="spc_box">
@@ -122,14 +138,14 @@
       <hr class="light">
 
       <div class="spc_box">
-        表示メニュー(または結果リストの右クリックメニュー)の「<b>検索中に結果リストを更新しない</b>」をチェックする、検索の途中経過を結果リストに表示しません(プログレスバーやヒット数は表示)。<br>
+        表示メニュー(または結果リストの右クリックメニュー)の「<b>検索中に結果リストを更新しない</b>」をチェックする、検索の途中経過を結果リストに表示しません(プログレスバーやヒット数は表示、Grep2 では無効)。<br>
         「<b>結果リストに項目番号を表示</b>」をチェックすると、項目の通し番号が表示されます。また、「<b>項目番号をファイル単位で表示</b>」もチェックすると、項目番号をファイル単位の連番で表示します。ファイル内で複数行ヒットした場合、最初の行だけに番号が表示されます。なお、行内容でソートしている場合は項目の通し番号になります。<br>
         「<b>結果リストにサブディレクトリ名を表示</b>」をチェックすると、ファイル名の前にカレント以下のサブディレクトリ名が表示されます(ワークリストの場合は除く)。<br>
         「<b>行頭のタブや空白を非表示</b>」をチェックすると、結果リストで、行頭のタブや空白を除外して表示します(次行部分を含む)。<br>
         「<b>マッチ語が見えないとき前部分を省略</b>」をチェックすると、結果リストの各行で、マッチした語が見えない場合、前部分を省略して見えるように表示します。<br>
         「<b>フィルタの語を強調表示</b>」をチェックすると、結果リストをフィルタで絞り込んでいる場合、検索文字列の代わりに<a href="#Filter">フィルタ</a>の語を強調表示します。<br>
         「<b>次行表示部分の明度を加減</b>」をチェックすると、後述の <img src="chkbox.png" alt=""> <b>次行表示</b>
-        をチェックしている場合に、次行部分の文字明度を加減してマッチ行と区別しやすくします。<br>
+        をチェックしている場合に、次行部分の文字明度を加減してマッチ行と区別しやすくします(Grep2 では無効)。<br>
       </div>
 
       <hr class="light">
@@ -170,27 +186,29 @@
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 正規表現</dt>
-    <dd>検索に正規表現(PCRE)を用います。<br>
-      入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて<span
-        class="btn_frame">開始</span>ボタンを押せません。<br>
+    <dd>検索に正規表現(Grep:PCRE、Grep2:POSIX)を用います。<br>
+      入力内容が正しくない場合、入力欄を囲むエラー色の枠が表示されて<span class="btn_frame">開始</span>ボタンを押せません。<br>
       なお検索文字列欄の右クリックメニューから、正規表現を参照したり、<a href="hid00085.htm">正規表現チェッカー</a>を開いたりできます。<br>
     </dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> AND</dt>
-    <dd>検索語を複数指定している場合に、AND検索を行います。チェックを外すとOR検索になります。</dd>
+    <dt class="no_bg"><img src="chkbox.png" alt=""> AND <span class="app_text">(Grep2 では無効)</span></dt>
+    <dd>
+      検索語を複数指定している場合に、AND検索を行います。チェックを外すとOR検索になります。<br>
+      <b>Grep2</b> では、代わりに<b>フィルタ</b>を利用してください。
+    </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 大小区別</dt>
     <dd>大文字・小文字を区別して検索します。</dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> 1マッチ</dt>
+    <dt class="no_bg"><img src="chkbox.png" alt=""> 1マッチ <span class="app_text">(Grep2 では無効)</span></dt>
     <dd>そのファイルで一箇所マッチしたらそれ以降の検索を止め、次のファイルに移ります。</dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> タグ除外</dt>
+    <dt class="no_bg"><img src="chkbox.png" alt=""> タグ除外 <span class="app_text">(Grep2 では無効)</span></dt>
     <dd>ファイルがHTML文書の場合、HTMLタグ部分を除外して検索します。<br>
       HTML文書以外のファイルに対しては機能しません。
     </dd>
 
-    <dt class="no_bg"><img src="chkbox.png" alt=""> 次行表示</dt>
+    <dt class="no_bg"><img src="chkbox.png" alt=""> 次行表示 <span class="app_text">(Grep2 では無効)</span></dt>
     <dd>結果リストに、マッチした行以降の3行(空行は除く)を改行マークで区切って表示します。<br>
       検索終了後に変更した場合にも、表示が切り替わります。
     </dd>
