--- a/help/src/hid00063.htm
+++ b/help/src/hid00063.htm
@@ -693,12 +693,12 @@ MsgBox_%Buffer%
       </dd>
 
       <dt id="GrepSetMask" class="no_bg">GrepSetMask<span class="pram_text">_マスク</span></dt>
-      <dd><a href="hid00056.htm">文字列検索(GREP)</a>のマスクを設定します。<a href="hid00005.htm#Grep">Grep</a> コマンドとあわせて用います。<br>
+      <dd><a href="hid00056.htm">文字列検索(GREP)</a>のマスクを設定します。<a href="hid00005.htm#Grep">Grep</a>/<a href="hid00005.htm#Grep2">Grep2</a> コマンドとあわせて用います。<br>
         <a href="hid00075.htm">.nyanfi ファイルによる設定</a>も可能です。<br>
       </dd>
 
       <dt id="GrepStart" class="no_bg">GrepStart</dt>
-      <dd>可能なら<a href="hid00056.htm">文字列検索(GREP)</a>を開始します。<a href="hid00005.htm#Grep">Grep</a> コマンドとあわせて用います。</dd>
+      <dd>可能なら<a href="hid00056.htm">文字列検索(GREP)</a>を開始します。<a href="hid00005.htm#Grep">Grep</a>/<a href="hid00005.htm#Grep2">Grep2</a> コマンドとあわせて用います。</dd>
 
       <dt id="Hint" class="no_bg">Hint<span class="pram_text">[_[!]メッセージ]</span></dt>
       <dd>指定したメッセージをヒント表示します。<br>
