--- a/help/src/hid00101.htm
+++ b/help/src/hid00101.htm
@@ -1256,6 +1256,11 @@
       <td><a href="hid00056.htm">→ 文字列検索</a></td>
     </tr>
     <tr>
+      <td><a href="hid00005.htm#Grep2">Grep2</a></td>
+      <td>文字列検索(GREP)</td>
+      <td><a href="hid00056.htm">→ 文字列検索</a></td>
+    </tr>
+    <tr>
       <td><a href="hid00005.htm#IncSearch">IncSearch</a></td>
       <td>インクリメンタルサーチ</td>
       <td><a href="hid00050.htm">→ インクリメンタルサーチ・モード</a></td>
@@ -2804,6 +2809,11 @@
     </tr>
     <tr>
       <td><a href="hid00006.htm#Grep">Grep</a></td>
+      <td>文字列検索(GREP)</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00006.htm#Grep2">Grep2</a></td>
       <td>文字列検索(GREP)</td>
       <td></td>
     </tr>
