--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,6 +37,17 @@
   </div>
 
   <dl>
+    <dt>V16.13 <span class="ver_date">(2024-01-01)</span></dt>
+    <dd>
+      ・ファイラー/テキストビューアに Grep2 コマンドを追加。Grep コマンドと同じ文字列検索(GREP)画面が開きますが、検索処理に外部の grep.exe (Git for Windows)を利用します。いくつかの制約がありますが、正規表現検索などは従来の Grep コマンドに比べてかなり高速です。<br>
+      ・文字列検索(GREP)で、フィルタによる結果の絞り込みは、ファイル名や行番号を除いた行内容部分のみを対象とするようにしました。ただし、Grep2 で「1マッチ」が有効な場合はファイル名しか取得されないため、ファイル名が対象となります。<br>
+      ・文字列検索(GREP)で「行頭のタブや空白を非表示」が有効な場合、「行内容でソート」でも行頭のタブや空白を除いてソートするようにしました。<br>
+      ・文字列検索(GREP)の結果リストで、省略されているファイル名をスティッキー表示するようにしました。<br>
+      ・Git GREP で、検索文字列欄に空白で区切った単語を入力した場合、OR検索と見なすようにしました。また、正規表現で \d を入力した場合、[0-9] に変換して渡すようにしました。<br>
+      ・Gitビューアのブランチ一覧の右クリックメニューに「タグを降順で表示」を追加。<br>
+      ・ListNyanFi コマンドで、DLLや実行ファイルのマシン情報を取得していなかったのを修正。<br>
+    </dd>
+
     <dt>V16.12 <span class="ver_date">(2023-12-29)</span></dt>
     <dd>
       ・文字列検索(GREP)/文字列置換の結果リストを見やすくしました。同じファイル内の2番目以降ではファイル名を省略し、異なるファイル間には境界線を引きます。また、行番号は分離して右揃えで表示します。<br>
