--- a/help/src/hid00002.htm
+++ b/help/src/hid00002.htm
@@ -11,6 +11,7 @@
 	<param name="Keyword" value="dynarecycler.spi">
 	<param name="Keyword" value="Git for Windows">
 	<param name="Keyword" value="git.exe">
+	<param name="Keyword" value="grep.exe">
 	<param name="Keyword" value="hhh.exe">
 	<param name="Keyword" value="Migemo">
 	<param name="Keyword" value="tar64.dll">
@@ -101,6 +102,16 @@
       git.exe が標準的な場所にインストールされている場合は自動的に検出されますが、そうでない場合は <a href="hid00024.htm#Other">オプション設定 - 一般2 - その他</a>
       で設定してください。<br>
       詳しくは、<a href="hid00090.htm">Git の利用について</a> を参照してください。
+    </dd>
+
+    <dt class="no_bg"><b>grep.exe</b></dt>
+    <dd>
+      ファイラー/テキストビューアの <a href="hid00005.htm#Grep2">Grep2</a> コマンドで高速な<a href="hid00056.htm">文字列検索(GREP)</a>を行えます。<br>
+      <b>Git for Windows</b> をインストールすると一緒にインストールされます。<br>
+      自動的に検出されない場合は <a href="hid00024.htm#Other">オプション設定 - 一般2 - その他</a> で設定してください。<br>
+      <div class="note_text">
+        なお <b>GnuWin32</b> のものだと、うまく動作しないようです。
+      </div>
     </dd>
   </dl>
   <br>
