--- a/help/src/hid00100.htm
+++ b/help/src/hid00100.htm
@@ -702,6 +702,11 @@
       <td>•¶Žš—ñŒŸõ(GREP)</td>
       <td><a href="hid00056.htm">¨ •¶Žš—ñŒŸõ</a></td>
     </tr>
+    <tr>
+      <td><a href="hid00005.htm#Grep2">Grep2</a></td>
+      <td>•¶Žš—ñŒŸõ(GREP)</td>
+      <td><a href="hid00056.htm">¨ •¶Žš—ñŒŸõ</a> </td>
+    </tr>
 
     <tr id="f_H">
       <td><a href="hid00005.htm#HelpContents">HelpContents</a></td>
@@ -2191,6 +2196,11 @@
 
     <tr id="v_G">
       <td><a href="hid00006.htm#Grep">Grep</a></td>
+      <td>•¶Žš—ñŒŸõ(GREP)</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td><a href="hid00006.htm#Grep2">Grep2</a></td>
       <td>•¶Žš—ñŒŸõ(GREP)</td>
       <td></td>
     </tr>
