--- a/help/src/hid00019.htm
+++ b/help/src/hid00019.htm
@@ -128,7 +128,7 @@
 
       <img src="chkbox.png" alt=""> <b>あいまい検索</b>
       <div class="indent1">
-        検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字と見なされます。例えば、大小文字の区別が有効な場合、検索語 "NF" は "hogeNF"、"NyanFi" などにマッチします。<br>
+        検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字とみなされます。例えば、大小文字の区別が有効な場合、検索語 "NF" は "hogeNF"、"NyanFi" などにマッチします。<br>
       </div>
 
       <img src="chkbox.png" alt=""> <b>上下端でループ</b>
