--- a/help/src/hid00050.htm
+++ b/help/src/hid00050.htm
@@ -49,7 +49,7 @@
       <div class="spc_box">
         <a href="hid00019.htm#IncSearch">オプション設定 - コマンド</a>
         の「<b>大小文字を区別</b>」がチェックされていると、大文字・小文字を区別してサーチします。<br>
-        また「<b>あいまい検索</b>」がチェックされている、検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。この場合、半角空白はAND検索ではなく文字と見なされます。<br>
+        また「<b>あいまい検索</b>」がチェックされている、検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。この場合、半角空白はAND検索ではなく文字とみなされます。<br>
         これらのオプションは、サーチ状態表示(ドライブ情報部分)の右クリックメニューからも切り替えられます。
       </div>
 
