--- a/help/src/hid00056.htm
+++ b/help/src/hid00056.htm
@@ -47,6 +47,7 @@
       <li>UTF-8 以外のファイルでは、日本語を検索できません。</li>
       <li>検索の進捗状況は表示されず、中断もできません。</li>
       <li>正規表現はPerl互換(PCRE)ではなく、拡張正規表現(POSIX)になります(\d については内部で [0-9] に変換)。</li>
+      <li><b>xd2txlib.dll</b> によるバイナリ文書の検索はできません。</li>
       </ul>
   </p>
   <hr clas="light">
@@ -97,7 +98,7 @@
       </div>
       <img src="chkbox.png" alt=""> <b>AND/OR</b> をチェックしていると、複数のキーワードを空白で区切って入力した場合にAND検索、"<b>|</b>"
       で区切るとOR検索で絞り込めます。区切りが混在しているその場合は、空白(AND)の方が | (OR)よりも優先順位が高くなります。<br>
-      なお、大小文字は区別されません。<br>
+      入力内容に大文字が含まれていると大文字・小文字が区別されます。そうでない場合は区別されません<br>
       入力欄の幅は、状態表示との間にある境界線をドラッグすることで変更できます。<br>
     </dd>
 
@@ -127,7 +128,7 @@
         「<b>検索結果の退避</b>」で、現在表示されている結果リストの内容をバッファに退避できます。退避しておいた内容は、「<b>検索結果の復帰</b>」で結果リストに呼び戻せます。</div>
 
       <div class="spc_box">
-        「<b>ヒットしたカレントのファイルを選択</b>」では、結果リストに表示されているファイルのうち、カレントのファイルリストにあるものを選択状態にします。この後でさらに検索を行った場合、選択されているファイルが検索対象となります。<br>
+        「<b>ヒットしたカレントのファイルを選択</b>」では、結果リストに表示されているファイルのうち、カレントのファイルリストにあるものを選択状態にします。ファイラーで <a href="hid00005.htm#SelAllFile">SelAllFile</a> コマンドが割り当てられているキーでも選択できます。この後でさらに検索を行った場合、選択されているファイルが検索対象となります。<br>
         「<b>ヒットしたファイルを含むディレクトリを選択</b>」では、結果リストのファイルを含んでいるカレントのディレクトリを選択状態にします。この後でさらに検索を行った場合、選択されているディレクトリが検索対象となります。<br>
       </div>
 
@@ -194,11 +195,14 @@
     <dt class="no_bg"><img src="chkbox.png" alt=""> AND <span class="app_text">(Grep2 では無効)</span></dt>
     <dd>
       検索語を複数指定している場合に、AND検索を行います。チェックを外すとOR検索になります。<br>
-      <b>Grep2</b> では、代わりに<b>フィルタ</b>を利用してください。
+      <b>Grep2</b> では、代わりに<b>フィルタ</b>を利用するか、「<b>ヒットしたカレントのファイルを選択</b>」してさらに検索を行ってください。
     </dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 大小区別</dt>
     <dd>大文字・小文字を区別して検索します。</dd>
+
+    <dt class="no_bg"><img src="chkbox.png" alt=""> 単語</dt>
+    <dd>単語単位で検索します。検索文字列は英単語境界でのみ一致します。</dd>
 
     <dt class="no_bg"><img src="chkbox.png" alt=""> 1マッチ <span class="app_text">(Grep2 では無効)</span></dt>
     <dd>そのファイルで一箇所マッチしたらそれ以降の検索を止め、次のファイルに移ります。</dd>
