--- a/help/src/hid00109.htm
+++ b/help/src/hid00109.htm
@@ -37,6 +37,15 @@
   </div>
 
   <dl>
+    <dt>V16.14 <span class="ver_date">(2024-01-03)</span></dt>
+    <dd>
+      ・文字列検索(GREP)/文字列置換で、誤操作しにくいようにアクティブな「置換」タブを「検索」タブの補色で表示するようにしました。また、[中断]ボタンを[開始]ボタンと兼ねるようにしました。検索中は[開始]が[中断]に変わります。<br>
+      ・文字列検索/置換およびGitGREP画面に「単語」オプションを追加。検索文字列は英単語境界でのみ一致します。<br>
+      ・文字列検索/置換でカレントのファイルのみが選択中の場合、マスクやサブディレクトリの設定を隠し、代わりに選択ファイル数を強調表示するようにしました。<br>
+      ・文字列検索/置換で、「ヒットしたカレントのファイルを選択」を、ファイラーで SelAllFile コマンドが割り当てられているキーでも行えるようにしました。また選択後の確認メッセージは出さないようにしました。なお、ファイル選択後、それらに対してさらに検索を行えなくなっていたのを修正。<br>
+      ・文字列検索で、結果リスト項目の一時的な削除ができなくなっていたのを修正。<br>
+    </dd>
+
     <dt>V16.13 <span class="ver_date">(2024-01-01)</span></dt>
     <dd>
       ・ファイラー/テキストビューアに Grep2 コマンドを追加。Grep コマンドと同じ文字列検索(GREP)画面が開きますが、検索処理に外部の grep.exe (Git for Windows)を利用します。いくつかの制約がありますが、正規表現検索などは従来の Grep コマンドに比べてかなり高速です。<br>
