--- a/help/src/hid00005.htm
+++ b/help/src/hid00005.htm
@@ -1417,7 +1417,7 @@ nyanfi_imgview.jpg 129,806 800 × 600  (4 : 3)
       </div>
       <div class="spc_box">
         パラメータに <b>CS</b> を指定すると、大小文字を区別します。<br>
-        パラメータに <b>FZ</b> を指定すると、検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字と見なされます。<br>
+        パラメータに <b>FZ</b> を指定すると、検索語の各文字間に任意の文字列があってもマッチする<b>あいまい検索</b>になります。なお半角空白は、AND検索ではなく文字とみなされます。<br>
         複数のパラメータを指定する場合は <b>;</b> (セミコロン)で区切ってください。<br>
       </div>
       <a href="#IncSearch">→ IncSearch</a>　<a href="#SelMask">→ SelMask</a>　<a href="#ClearMask">→ ClearMask</a>
@@ -1686,7 +1686,7 @@ nyanfi_imgview.jpg 129,806 800 × 600  (4 : 3)
       カレントパス以下のテキストファイルに対して、文字列検索を行います。<br>
       またタブを切り替えることにより、<a href="hid00061.htm">文字列置換</a>もできます。<br>
       <a href="hid00052.htm">ファイル名検索</a>の結果リストや<a href="hid00060.htm">ワークリスト</a>に対しても実行可能。<br>
-      なお、カレントで選択している項目がある場合は、それらが検索対象となります(ファイルのみ選択の場合、マスク指定は無視)。<br>
+      なお、カレントで選択している項目がある場合は、それらが検索対象となります(ファイルのみ選択の場合、マスク指定は無効)。<br>
       パラメータに<b>検索文字列</b>を指定すると、文字列検索にしてそれを設定します。<br>
 
       <div class="spc_box">
@@ -1713,6 +1713,7 @@ NyanFi.exe -Ld:\hoge -CL -XGrep_"にゃぁ":GrepSetMask_*.txt:GrepStart
       ・UTF-8 以外のファイルでは、日本語を検索できません。<br>
       ・検索の進捗状況は表示されず、中断もできません。<br>
       ・正規表現はPerl互換(PCRE)ではなく、拡張正規表現(POSIX)になります(\d については内部で [0-9] に変換)。<br>
+      ・<b>xd2txlib.dll</b> によるバイナリ文書の検索はできません。<br>
       </div>
     </dd>
     
