--- a/help/src/hid00061.htm
+++ b/help/src/hid00061.htm
@@ -49,6 +49,9 @@
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 大小区別</dt>
     <dd>大文字・小文字を区別して検索します。</dd>
 
+    <dt class="no_bg"><img src="chkbox.png" alt=""> 単語</dt>
+    <dd>単語単位で検索します。検索文字列は英単語境界でのみ一致します。</dd>
+
     <dt class="no_bg_indent1"><img src="chkbox.png" alt=""> 確認あり</dt>
     <dd>置換を行う前に確認ダイアログが表示されます。そこで「<b>全て置換</b>」を選ぶと、以降の全ファイルに対して確認なしで置換が実行されます。</dd>
   </dl>
